@@ -181,6 +181,7 @@ interface IAction
 	public function getController();
 }
 
+
 /**
  * IWebServiceProvider interface may be implemented by Web service provider classes.
  *
@@ -204,4 +205,30 @@ interface IWebServiceProvider
 	 * @param CWebService the currently requested Web service.
 	 */
 	public function afterWebMethod($service);
+}
+
+
+/**
+ * IViewRenderer interface is implemented by a view renderer class.
+ *
+ * A view renderer is {@link CWebApplication::viewRenderer viewRenderer}
+ * application component whose wants to replace the default view rendering logic
+ * implemented in {@link CBaseController}.
+ *
+ * @author Qiang Xue <qiang.xue@gmail.com>
+ * @version $Id$
+ * @package system.core
+ * @since 1.0
+ */
+interface IViewRenderer
+{
+	/**
+	 * Renders a view file.
+	 * @param CBaseController the controller or widget who is rendering the view file.
+	 * @param string the view file path
+	 * @param mixed the data to be passed to the view
+	 * @param boolean whether the rendering result should be returned
+	 * @return mixed the rendering result, or null if the rendering result is not needed.
+	 */
+	public function renderFile($context,$file,$data,$return);
 }
