@@ -7,6 +7,7 @@ Version 1.0b To be released
 - Changed the default behavior of CWebServiceAction to serve WSDL (Qiang)
 - Removed getIsNewRecord and setIsNewRecord methods from CActiveRecord.
   Added CActiveRecord.isNewRecord property. (Qiang)
+- Implemented view renderer feature so that customized view template may be used. (Qiang)
 
 Version 1.0a October 5, 2008
 =============================
